--- a/WebMVCHelp/Views/Home/Index.cshtml
+++ b/WebMVCHelp/Views/Home/Index.cshtml
@@ -29,3 +29,12 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+<p>
+    @Html.DropDownList("Drop1")
+</p>
+<p>
+    @Html.DropDownList("Drop2")
+</p>
+<p>
+    @Html.DropDownList("Drop3", new SelectList((IEnumerable<WebMVCHelp.Models.Credit>)ViewBag.Drop3, "CreditId", "Description"))
+</p>
